--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,16 +9,19 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-feature android:required="true" android:name="android.hardware.location.gps"/>
-    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.assignment10final.CloudIntroActivity"
+            android:name="com.example.assignment10final.CloudListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,6 +36,11 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyATsreN9VWCZQSzc9nG7rQzj7-kVbcms2I" />
+
+        <activity
+            android:name="com.example.assignment10final.CloudDetailActivity"
+            android:label="@string/title_activity_cloud_detail" >
+        </activity>
     </application>
 
 </manifest>
